--- a/file.html
+++ b/file.html
@@ -26,6 +26,7 @@
       </div>
       <br><br><br>
       <button type="submit" class="btn">Submit</button>
+      <button type="reset" value="Reset">Reset</button>
       <a href='http://localhost:3000/blogshome' class="btn red">Cancel </a>
     </form>
     <br>
