--- a/file.html
+++ b/file.html
@@ -25,9 +25,10 @@
         </div>
       </div>
       <br><br><br>
-      <button type="submit" class="btn">Submit</button>
+      <button type="submit" class="btn">Previous</button>
+       <button type="submit" class="btn">Submit</button>
       <button type="reset" value="Reset">Reset</button>
-      <a href='http://localhost:3000/blogshome' class="btn red">Cancel </a>
+      <a href='http://localhost:3000/home' class="btn red">Cancel </a>
     </form>
     <br>
     <img src="<%= typeof file != 'undefined' ? file : '' %>" class="responsive-img">
