--- a/file.html
+++ b/file.html
@@ -27,7 +27,7 @@
       <br><br><br>
       <button type="submit" class="btn">Previous</button>
        <button type="submit" class="btn">Submit</button>
-      <button type="reset" value="Reset">Reset</button>
+      <button type="cancel" value="cancel">Cancel</button>
       <a href='http://localhost:3000/home' class="btn red">Cancel </a>
     </form>
     <br>
